<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/settingsCzestotliwosc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CzęstotliwośćMin"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/settingsDlugosc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Długość_geograficzna"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/settingsSzerokosc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Szerokość_geograficzna"
        android:inputType="numberDecimal"/>
</android.support.v7.widget.LinearLayoutCompat>